B-68612 Tech Debt: FDA: replace Collections.emptySet() by Set.of()