@@ -18,7 +18,6 @@ import org.springframework.security.core.context.SecurityContextHolder;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -56,7 +55,7 @@ public final class ForeignSecurityUtilsTest {
             "FDA_DELETE_SCENARIO", "FDA_EXCLUDE_FROM_SCENARIO", "FDA_SEND_FOR_WORK_RESEARCH",
             "FDA_SEND_FOR_CLASSIFICATION", "FDA_LOAD_CLASSIFIED_USAGE", "FDA_SPECIALIST_PERMISSION")};
         Object[] researcherRole = {Set.of("FDA_RESEARCHER_PERMISSION")};
-        Object[] roleWithoutPermissions = {Collections.emptySet()};
+        Object[] roleWithoutPermissions = {Set.of()};
         return Arrays.asList(
             viewOnlyRole,
             approverRole,
