@@ -24,7 +24,6 @@ import org.junit.runner.RunWith;
 import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -43,7 +42,7 @@ public class TypeOfUseFilterWidgetTest {
 
     private static final String REPORTED_TYPE_OF_USE = "COPY_FOR_MYSELF";
     private final TypeOfUseFilterWidget typeOfUseFilterWidget =
-        new TypeOfUseFilterWidget(() -> List.of(REPORTED_TYPE_OF_USE), Collections.emptySet());
+        new TypeOfUseFilterWidget(() -> List.of(REPORTED_TYPE_OF_USE), Set.of());
 
     @Test
     public void testLoadBeans() {
@@ -78,7 +77,7 @@ public class TypeOfUseFilterWidgetTest {
         Capture<ValueProvider<String, List<String>>> providerCapture = newCapture();
         expect(Windows.showFilterWindow(eq("Types of Use filter"), same(typeOfUseFilterWidget),
             capture(providerCapture))).andReturn(filterWindow).once();
-        filterWindow.setSelectedItemsIds(Collections.emptySet());
+        filterWindow.setSelectedItemsIds(Set.of());
         expectLastCall().once();
         expect(filterWindow.getId()).andReturn("id").once();
         filterWindow.addStyleName("type-of-use-filter-window");
